Homepage - Correct spacing

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -175,6 +175,8 @@ nav a {
     display: flex;
     flex-direction: column-reverse;
 
+    margin-top: 2rem;
+
     gap: 1rem;
 }
 
